web(secret-prompt): fix html

--- a/web/secret-prompt/setup/app/public/index.html
+++ b/web/secret-prompt/setup/app/public/index.html
@@ -43,7 +43,7 @@
 <body>
     <h1>Secret Prompt</h1>
     <div class="nes-container with-title">
-        <p class="title">Prove Yourself</p>
+        <p class="title">For machines</p>
         <p>Prove you are not a human and I will give you a gift.</p>
         <div class="nes-field">
             <label for="a">Secret</label>
@@ -64,8 +64,8 @@
     <br />
     <h3>Page Summarizer</h3>
     <div class="nes-container with-title">
-        <p class="title">We can do it all</p>
-        <p>Give me a URL of a page and I'll summarize the contents.</p>
+        <p class="title">For humans</p>
+        <p>Give me a URL of a page and I will summarize its contents for free!</p>
         <form action="/summarize" method="post">
             <input class="nes-input" name="page"></input>
             <br />
